# bootcamp_course

./: .gitignore  .gitmodules  README.md  README.txt
assignments/day1/02_caesar_cipher/: assignment2.cpp
assignments/day1/03_bonus/: assignment_bonus.cpp
assignments/day2/01_numbers_array_pointers/: day2_assig1.cpp
assignments/day2/02_linked_list_bonus/: day2_assig2.cpp
assignments/day3/01_service_shop/: main.cpp
assignments/day3/02_bonus/: linked_list.cpp  linked_list.hpp  main.cpp  record.hpp  workshop_system.cpp  workshop_system.hpp
assignments/day4/01_shapes_compare/: main.cpp
assignments/day5/01_assignment/: main.cpp
assignments/day5/02_assignment/: main.cpp
assignments/day5/03_assignment/: main.cpp
assignments/day6/01_assignment/: main.cpp
assignments/day6/02_assignment/: main.cpp
assignments/day6/031_bonus_ringbuffer/: main.cpp  ringbuffer.hpp
assignments/day6/03_bonus1/: ringbuffer.cpp  ringbuffer.hpp
project/: README.txt  Untitled Diagram.drawio  project_brainstorm.drawio
project/documents/: MVP_definition.txt  coding_convention.txt  git_branching.txt  main_objectives_breakdown
project/source_code/: CMakeLists.txt  can_io_thread.cpp  run.sh
project/source_code/drivetrain/: Buffer.cpp  CMakeLists.txt  buffer.cpp  can_buffer.hpp  can_reader.hpp  drivetrain_input_reader.hpp  engine_simulator.hpp  main.cpp  user_input.hpp  vehicle.hpp
project/source_code/drivetrain/include/: can_buffer.h  can_buffer.hpp  can_reader.h  drivetrain_input_reader.h  engine_simulator.h  gearbox_simulator.h  gearbox_simulator.hpp  user_input.h  user_input.hpp  vehicle.h  vehicle.hpp
project/source_code/drivetrain/src/: can_buffer.cpp  can_reader.cpp  drivetrain_input_reader.cpp  engine_simulator.cpp  gearbox_simulator.cpp  main.cpp  test_main.cpp  vehicle.cpp
project/source_code/drivetrain/test/: CMakeLists.txt
project/source_code/drivetrain/test/engine/: engine_test.cpp  testmain.cpp
project/source_code/drivetrain/test/gearbox/: test_main.cpp
project/source_code/drivetrain/test/vehicle/: testmain.cpp
project/source_code/input_handler/: CMakeLists.txt  SetupVCAN.sh  input  input_handler.cpp  test_read_vcan.cpp
project/source_code/input_handler/include/: CANWriter.h  InputReader.h  can_fr_handler.h  keyboard_input_reader.h
project/source_code/input_handler/src/: CANWriter.cpp  InputReader.cpp  Main.cpp  can_fr_handler.cpp  keyboard_input_reader.cpp  main.cpp
project/source_code/output_handler/: CMakeLists.txt
project/source_code/output_handler/src/: main.cpp
project/source_code/utils/: CMakeLists.txt  Doxyfile
project/source_code/utils/include/: can_buffer.h  can_io_thread.h  can_reader.h  socketcan.h  user_input.h
project/source_code/utils/output_panel/: CMakeLists.txt  README.txt
project/source_code/utils/output_panel/app/avic/: CMakeLists.txt
project/source_code/utils/output_panel/app/avic/qml/: ValueSource.qml  cluster-gauges.qml
project/source_code/utils/output_panel/app/avic/src/: your_stuff.cpp
project/source_code/utils/output_panel/lib/libcanio/include/canio/: can_common.h
project/source_code/utils/output_panel/lib/libcanio/src/: can_common.cpp
project/source_code/utils/socketcan_cpp/: socketcan.cpp  socketcan.h
project/source_code/utils/src/: can_buffer.cpp  can_io_thread.cpp  can_reader.cpp  socketcan.cpp  user_input.cpp
project/system_overview/: break_pedal.drawio  component_diagram.drawio  component_diagram_20201119.drawio  mvp_definition.drawio  project_brainstorm.drawio
(+519 files in other folders)
